# reid-llvm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  bps  easy.reid  foo.reid  graphics.reid  libtest.sh  main.cpp  medium.reid  otus  otus.c  otus.ll  test.ll  test.reid
documentation/: README.md  book.md  intrinsics.md  srandard_library.md  standard_library.md
examples/: a.reid  a1.reid  a3.reid  arithmetic.reid  array_short.reid  array_structs.reid  associated_functions.reid  associated_functions_shorthand.reid  borrow.reid  borrow_hard.reid  breaking.reid  cast.reid  compilcated_main.reid  complicated_imported.reid  cpu_raytracer.reid  custom_binop.reid  div_mod.reid  easiest.rs  easy.rs  float.reid  (+28 more)
reid/: Cargo.toml  easiest.reid
reid-lsp/: .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  README.md  language-configuration.json  package.json  tsconfig.json  webpack.config.js
reid-lsp/client/: package.json  tsconfig.json
reid-lsp/client/src/: extension.ts
reid-lsp/src/: analysis.rs  main.rs
reid-lsp/syntaxes/: grammar.json  grammar.yaml
reid/examples/: arithmetic.rs  array.rs  cli.rs  fibonacci.rs  mutable.rs  testcodegen.rs
reid/examples/reid/: arithmetic.reid  array.reid  fibonacci.reid  mutable.reid
reid/lib/: std.reid
reid/src/: allocator.rs  codegen.rs  error_raporting.rs  intrinsics.rs  ld.rs  lexer.rs  lib.rs  main.rs  pad_adapter.rs  token_stream.rs  util.rs
reid/src/ast/: lexer.rs  mod.rs  parse.rs  process.rs  token_stream.rs
reid/src/codegen/: allocator.rs  intrinsics.rs  llvm.rs  mod.rs  scope.rs  util.rs
reid/src/mir/: display.rs  fmt.rs  generics.rs  impl.rs  implement.rs  imports.rs  linker.rs  macros.rs  mod.rs  pass.rs  scopehints.rs  typecheck.rs  typeinference.rs  typerefs.rs  types.rs
reid/src/mir/typecheck/: mod.rs  typecheck.rs  typeinference.rs  typerefs.rs
reid/src/old_codegen/: llvm.rs  mod.rs
reid/tests/: e2e.rs  stdlib.rs  util.rs
(+51 files in other folders)
