[package]
name = "reid"
version = "1.0.0-beta.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["color"]

color = ["colored"]
log_output = []
context_debug = []

[dependencies]
## Make it easier to generate errors
thiserror = "1.0.44"
reid-lib = { path = "../reid-llvm-lib", version = "1.0.0-beta.3", registry="gitea-teascade" }

colored = {version = "3.0.0", optional = true}